 What's New for Links2 PSP Port
================================

links-2.1pre22 PSP r1214 (2006-07-08)
NEW FEATURES
(raf) Updates to pspgu driver: 
	-Default resolution is now 960x544 (Its scaled down to the PSP's 480x272)
	-Links scaling is now disabled (as it used too much memory, and was one of the main culprits of memory errors)
	-Font size changed from 12 to 24, so it is readable without zoom (at 960x544)
	-Zoom (along with new virtual resolution of 960x544 implemented using a kind of double buffering).
(raf) New button mappings: 
	UP/DOWN = scroll up/scroll down (former R+UP/DOWN)
	R+UP/DOWN = page up/page down
	L (held) = zoom (while L is held). Use analog stick to move around.
	L+CROSS = toggles zoom lock. (Once locked, the analog will control the mouse. Use L+analog to move zoom window).
BUG FIXES

links-2.1pre22 PSP r1206 (2006-07-03)
NEW FEATURES
(raf) Moved the "None" WiFi connection to the bottom of the list.
(raf) New driver based on the linux framebuffer driver. This new driver access video RAM directly. Most of the graphic problems with SDL seem to be gone; but theres some new problems (the menus don't clear correctly).
(sandberg) Using direct VRAM version of Danzeff to free up the memory used by the previous SDL version.
BUG FIXES

links-2.1pre22 PSP r1195 (2006-06-13)
NEW FEATURES
(raf) StandAlone: New connection selection: "None" allows the user to continue initialization without having to connect.
(raf) Plugin: Changed the plugin priority to 45, this should prevent skipping while listening to pspradio.
(raf) Updated to links-2.1pre22:
	Details of links-2.1pre22 (from Changelog):
		-sponsored by Alex Poylisher <sher@komkon.org>
		Use 8-bit gamma correction on machines with slow FPU (or with FPU
		emulation) --- this significantly reduces startup time
		-Optional scrollbars in frames
		-Implemented porn mode (bare image autoscaling aka fullscreen).
		-Fixed ignorance of aspect ratio for images where only one dimension
		is specified.